[#90] Add --add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED to the default modular JVM arguments
The equivalent addition to the launch scripts and to the host controller is WFCORE-7678.

Signed-off-by: Radoslav Husar <rhusar@ibm.com>